# sentient-core-optimisation

./: .env  .env.example  .gitignore  TRACKING.md  conftest.py  dev_requirements.txt  docker-compose.local.yml  docker-compose.test.yml  docker-compose.yml  full_log.txt  kong.yml  package-lock.json  package.json  pyproject.toml  requirements.txt  run_tests.py
.documents/00_CONCEPTUAL_FRAMEWORK/: 00_01_vision_and_mission.md  00_02_story_concepts_painpoints.md  00_03_user_personas.md  00_04_branding_guidelines.md  00_05_technical_design_document.md
.documents/00_PROJECT_OVERVIEW/: 00_03_project_description_and_positioning.md
.documents/01_PROJECT_PLANNING/: 01_01_high_level_plan.md  01_04_task_breakdown.md  01_07_prototype_action_plan.md  BUSINESS_PLAN_EXECUTIVE.md  INVESTOR_BUSINESS_PLAN.md  STRATEGIC_ROADMAP.md
.documents/02_HACKATHON_CENTRAL/: 02_00_01_selection_of_tracks.md  02_00_02_primary_track_strategy_and_form_input.md  02_01_overall_hackathon_strategy.md  02_02_raise_your_hack_overview.md  02_03_pitch_deck_outline.md  02_04_infographics_and_visuals.md  02_07_01_wow_demo_storyboard.md  PITCH_DECK_OUTLINE.json  PRESENTATION_SCRIPT.md
.documents/03_TECHNICAL_DEEP_DIVES/: 03_02_ai_development_environment.md  03_04_platform_scalability_performance.md  (+12 more)
.tracking/: agent-dev-history-0001.md
scripts/: apply_migrations.ps1  check_db.py  check_embeddings_schema.py  init_supabase.py  install_pgvector.sql  list_tables.py  manual_setup.sql  requirements-dev.txt  supabase.ps1
src/: diag_test.py  main.py
supabase/: README.md  config.toml
tests/: conftest.py
(+182 files in other folders)
